--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "@google-cloud/storage": "^6.4.1",
+    "express": "^4.18.1",
+    "google-auth-library": "^8.2.0",
+    "ts-node": "^10.9.1"
   }
 }
